resize highcharts charts and change colors

--- a/plots/benefits_income_hc.html
+++ b/plots/benefits_income_hc.html
@@ -18,13 +18,13 @@
 			<OPTION VALUE="G">2 adults, 2 children</option>
 			<OPTION VALUE="H">2 adults, 3 children</option>
 	</SELECT>
-		<div id="container" style="max-width:700px"></div>
+		<div id="container" style="max-width:800px"></div>
     <script type="text/javascript">
 		var options = {
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '75%'
+				height: '80%'
     },
 		title: { text: 'Forsyth County, NC income and benefits' },
 		subtitle: { text: 'One adult'},
@@ -32,8 +32,7 @@
         text: 'Forsyth Futures',
         href: 'http://forsythfutures.org'
     },
-		colors: ["rgb(53,97,143,.8)", "rgb(30,212,107,.8)", "rgb(239,111,204,.8)", "rgb(97,197,230,.8)", "rgb(118,7,150,.8)"],
-    ///["#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", "#8c564b"],
+		colors: ["rgb(141,228,211,.9)", "rgb(121,28,118,.8)", "rgb(127,174,234,.8)"],
 
 		yAxis: {
 				max: 6000,
