add jQuery function

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -21,6 +21,8 @@
 		<div id="container" style="max-width:800px"></div>
     <script type="text/javascript">
 
+    $(function () {
+
 		var options = {
     chart: {
         renderTo: 'container',
@@ -275,6 +277,7 @@
 		}
 		    var chart = new Highcharts.Chart(options);
 		});
+	});
     </script>
 
 </body>
