--- a/plots/benefits_income_hc.html
+++ b/plots/benefits_income_hc.html
@@ -20,6 +20,9 @@
 	</SELECT>
 		<div id="container" style="max-width:800px"></div>
     <script type="text/javascript">
+
+    $(function () {
+
 		var options = {
     chart: {
         renderTo: 'container',
@@ -179,6 +182,9 @@
 		}
 		    var chart = new Highcharts.Chart(options);
 		});
+
+});
+
     </script>
 
 </body>
