--- a/plots/cliff_cdf_hc_ie.html
+++ b/plots/cliff_cdf_hc_ie.html
@@ -31,7 +31,7 @@
         text: 'Forsyth Futures',
         href: 'http://forsythfutures.org'
     },
-		colors: ["rgb(141,228,211,.9)", "rgb(121,28,118,.8)", "rgb(127,174,234,.8)"],
+		//colors: ["rgb(141,228,211,.9)", "rgb(121,28,118,.8)", "rgb(127,174,234,.8)"],
 
 		yAxis: {
 				max: 6000,
