remove all colors

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -40,7 +40,7 @@
         href: 'http://forsythfutures.org'
     },
 
-		colors: ["rgb(141,228,211,.9)", "rgb(78,45,166,.8)", "rgb(26,167,238,.8)", "rgb(197,8,158,.8)", "rgb(208,188,254,.9)", "rgb(66,65,117,.8)"],
+		//colors: ["rgb(141,228,211,.9)", "rgb(78,45,166,.8)", "rgb(26,167,238,.8)", "rgb(197,8,158,.8)", "rgb(208,188,254,.9)", "rgb(66,65,117,.8)"],
 
 		yAxis: {
 				max: 2500,
