--- a/plots/cliff_cdf_hc_ie.html
+++ b/plots/cliff_cdf_hc_ie.html
@@ -31,7 +31,8 @@
         text: 'Forsyth Futures',
         href: 'http://forsythfutures.org'
     },
-		//colors: ["rgb(141,228,211,.9)", "rgb(121,28,118,.8)", "rgb(127,174,234,.8)"],
+
+		colors: ['#2f7ed8', '#0d233a', '#8bbc21', '#910000', '#1aadce','#492970', '#f28f43', '#77a1e5', '#c42525', '#a6c96a'],
 
 		yAxis: {
 				max: 6000,
