--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -24,11 +24,12 @@
 
     $(function () {
 
+		// colors do not work with IE, so make colors conditional on browser
 		if (navigator.appName == 'Microsoft Internet Explorer' ||  !!(navigator.userAgent.match(/Trident/) || navigator.userAgent.match(/rv:11/)) || (typeof $.browser !== "undefined" && $.browser.msie == 1))
 			{
-			  color_palette = null
+			  color_palette = ["rgb(141,228,211)", "rgb(78,45,166)", "rgb(26,167,238)", "rgb(197,8,158)", "rgb(208,188,254)", "rgb(66,65,117)"];
 			} else {
-				color_palette = ["rgb(141,228,211,.9)", "rgb(78,45,166,.8)", "rgb(26,167,238,.8)", "rgb(197,8,158,.8)", "rgb(208,188,254,.9)", "rgb(66,65,117,.8)"]
+				color_palette = ["rgb(141,228,211,.9)", "rgb(78,45,166,.8)", "rgb(26,167,238,.8)", "rgb(197,8,158,.8)", "rgb(208,188,254,.9)", "rgb(66,65,117,.8)"];
 			}
 
 		var options = {
@@ -47,11 +48,7 @@
         href: 'http://forsythfutures.org'
     },
 
-		// colors do not work with IE, so make colors conditional on browser
-		colors: ["rgb(141,228,211)", "rgb(78,45,166)", "rgb(26,167,238)", "rgb(197,8,158)", "rgb(208,188,254)", "rgb(66,65,117)"],
-
-
-		//colors: ["rgb(141,228,211,.9)", "rgb(78,45,166,.8)", "rgb(26,167,238,.8)", "rgb(197,8,158,.8)", "rgb(208,188,254,.9)", "rgb(66,65,117,.8)"],
+		colors: color_palette,
 
 		yAxis: {
 				max: 2500,
