change rbg ie colors to hex

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -27,7 +27,7 @@
 		// colors do not work with IE, so make colors conditional on browser
 		if (navigator.appName == 'Microsoft Internet Explorer' ||  !!(navigator.userAgent.match(/Trident/) || navigator.userAgent.match(/rv:11/)) || (typeof $.browser !== "undefined" && $.browser.msie == 1))
 			{
-			  color_palette = ["rgb(141,228,211)", "rgb(78,45,166)", "rgb(26,167,238)", "rgb(197,8,158)", "rgb(208,188,254)", "rgb(66,65,117)"];
+			  color_palette = ['#2f7ed8', '#0d233a', '#8bbc21', '#910000', '#1aadce','#492970', '#f28f43', '#77a1e5', '#c42525', '#a6c96a'];
 			} else {
 				color_palette = ["rgb(141,228,211,.9)", "rgb(78,45,166,.8)", "rgb(26,167,238,.8)", "rgb(197,8,158,.8)", "rgb(208,188,254,.9)", "rgb(66,65,117,.8)"];
 			}
