add css to drop down

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -7,9 +7,15 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+		<style>
+			#familySize  {
+			  font-family: Sans-Serif;
+			  font-size: 90%;
+			}
+			</style>
 </head>
 <body>
-	Select Family Size: <SELECT id="list">
+	<span id = "familySize">Select Family Size: </span><SELECT id="list">
 			<OPTION VALUE="A">1 adult</option>
 			<OPTION VALUE="B">1 adult, 1 child</option>
 			<OPTION VALUE="C">1 adult, 2 children</option>
