--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -6,9 +6,15 @@
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<style>
+			#familySize  {
+			  font-family: Sans-Serif;
+			  font-size: 90%;
+			}
+			</style>
 </head>
 <body>
-	Select Household Size: <SELECT id="list">
+	<span id = "familySize">Select Household Size: </span><SELECT id="list">
 			<OPTION VALUE="A">1</option>
 			<OPTION VALUE="B">2</option>
 			<OPTION VALUE="C">3</option>
