--- a/plots/cliff_cdf_hc_dup.html
+++ b/plots/cliff_cdf_hc_dup.html
@@ -92,9 +92,6 @@
                 maxWidth: 400
             },
             chartOptions: {
-							// chart: {
-              //   height: 250
-							// 		},
 
 							 title: { text: null },
 
@@ -112,7 +109,8 @@
 								},
 								labels: {
 										format: '${value}'
-								}
+								},
+								plotLines: null
 							},
 
           		yAxis: {
