Update subtitle for mobile in cliff_cdf

--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -95,7 +95,7 @@
 
 							 title: { text: null },
 
-							 subtitle: { text: "Number of households below income levels"},
+							 subtitle: { text: "# below income levels"},
 
               credits: {
                   enabled: false
