--- a/plots/benefits_cliff_hc_dup.html
+++ b/plots/benefits_cliff_hc_dup.html
@@ -131,7 +131,7 @@
 		responsive: {
         rules: [{
             condition: {
-                maxWidth: 500
+                maxWidth: 400
             },
             chartOptions: {
 							//chart: {
@@ -148,6 +148,8 @@
 										format: '${value}'
 								}
 							},
+
+							events: null,
 
 							 title: { text: null },
 
