--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -8,9 +8,14 @@
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<style>
-			#familySize  {
+			#familySize, #p  {
 			  font-family: Sans-Serif;
 			  font-size: 90%;
+				color: #383838
+			}
+
+			ul li{
+			  margin: 10px 0;
 			}
 			</style>
 </head>
@@ -25,25 +30,37 @@
 			<OPTION VALUE="G">2 adults, 2 children</option>
 			<OPTION VALUE="H">2 adults, 3 children</option>
 	</SELECT>
-		<div id="container" style="max-width:800px"></div>
+		<div id="container" style="max-width:800px">
+		</div>
+		<p id="p">Click on legend to see description of benefit.</p>
     <script type="text/javascript">
 
     $(function () {
+
+		var benefit_descriptions = ['Food and Nutrition Services (FNS), previously known as food stamps and federally referred to as SNAP, provides low-income families with cash assistance for food.  Families receive an Electronic Benefits Transfer Card that is pre-loaded monthly with their benefit amount.  They can then use this card at grocery stores to buy food.',
+																'The Housing Choice Voucher program is administered by the Housing Authority of Winston-Salem and provides rent subsidies to low-income households.    Families can choose any housing in the private market, assuming the owner agrees to rent under the program.  In general, families must pay 10% of their gross income or 30% of their adjusted gross income in rent and the housing voucher covers the rest.',
+																"<p>The North Carolina Child Care Subsidy Program provides subsidized child care to families using state and federal funds.  Most families are required to pay 10% of their gross income in child care costs and the subsidy program will cover the rest, up to a given maximum.</p><p>The subsidy program has different initial income eligibility and continued income eligibility requirements.  For a 0-5 year old to initially qualify for subsidies, a household's income must fall under 200% of the federal poverty guidelines, or $4,100 for a family of four; but to remain in the program, household income only needs to fall under 85% of the state median income, or $4,958 for a family of four.<p>",
+																"The benefits cliff simulator combines three North Carolina health insurance programs: (1) Medicaid for Families with Dependent Children, (2) Medicaid for Infants and Children, and (3) NC Health Choice.  Here's an overview of each program:<ul><li>Medicaid for Families with Dependent Children (MAF): Full medicaid coverage for parents, caretakers relatives, and spouses who are caring for a related child under 18 in their household.  The family must be very low income.  For example, the monthly income of a family of four cannot exceed $744.</li><li>Medicaid for Infant and Children (MIF):  Full medicaid coverage for children 18 and under living in low-income households.  Children under 6 receive coverage when their family income is less than 210% of the federal poverty level, while children 6 to 18 gain coverage when their family income is less than 133% of the federal poverty level.</li><li>NC Health Choice:  Limited medicaid coverage for children 6 to 18 who live with families earning too much to qualify for Medicaid for Infant and Children.  Family income must fall under 210% of the federal poverty level to qualify for NC Health Choice.  The reason that only children 6 to 18 qualify for the program is because children 1 to 5 will qualify for Medicaid for Infant and Children.  This is because Medicaid for Infant Children and NC Health Choice have the same income threshold for children 1 to 5, and children eligible for both  must elect Medicaid for Infant and Children.</li></ul>",
+																"WIC is formally called the Special Supplemental Nutrition Program for Women, Infants, and Children.  It provides food for women, infants, and children under five through an electronic benefit transfer (EBT) card that can be used at grocery stores.  WIC participants also receive coupons for use at farmers' markets.",
+																"North Carolina's Work First Cash Assistance Program, called Temporary Assistance for Needy Families (TANF) federally, provides cash assistance and job training to low income families."]
 
 		var options = {
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '80%'
+				height: '80%'//,
+				//marginBottom: 50
     },
 
 		title: { text: 'Forsyth County, NC Benefits Cliff' },
 
-		subtitle: { text: 'One adult'},
+		subtitle: { text: 'One Adult',
+							  style: {
+									fontSize:'12px'
+								}},
 
     credits: {
-        text: 'Forsyth Futures',
-        href: 'http://forsythfutures.org'
+        enabled: false
     },
 
 		colors: ["rgb(141,228,211)", "rgb(78,45,166)", "rgb(26,167,238)", "rgb(197,8,158)", "rgb(208,188,254)", "rgb(66,65,117)"],
@@ -100,14 +117,21 @@
 			series: {
 					pointStart: 0,
 					pointInterval: 10,
-					xAxis: 'monthly'
-				}
-			},
+					xAxis: 'monthly',
+					events: {
+							legendItemClick: function () {
+									var description = '<p><strong>'+this.name + '</strong>:</p>' + benefit_descriptions[this.index];
+									document.getElementById("p").innerHTML = description;
+									return false;
+							}
+						}
+					}
+				},
 
 		responsive: {
         rules: [{
             condition: {
-                maxWidth: 500
+                maxWidth: 400
             },
             chartOptions: {
 							//chart: {
@@ -124,6 +148,8 @@
 										format: '${value}'
 								}
 							},
+
+							events: null,
 
 							 title: { text: null },
 
@@ -288,6 +314,5 @@
 	});
 
 </script>
-
 </body>
 </html>
