change subtitle to notify user that they can click on legend

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -54,7 +54,7 @@
 
 		title: { text: 'Forsyth County, NC Benefits Cliff' },
 
-		subtitle: { text: 'One Adult',
+		subtitle: { text: 'Click on legend to see description of benefit',
 							  style: {
 									fontSize:'12px'
 								}},
