fix income plot tooltip

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -17,6 +17,15 @@
 			ul li{
 			  margin: 10px 0;
 			}
+
+			@media (max-width: 400px)
+			{
+			    #p
+			    {
+			        display: none;
+			    }
+			}
+
 			</style>
 </head>
 <body>
@@ -134,9 +143,6 @@
                 maxWidth: 400
             },
             chartOptions: {
-							//chart: {
-              //  height: 250
-							//		},
 
 							xAxis: {
 								type: 'linear',
