style to float left

--- a/plots/number_benefits.html
+++ b/plots/number_benefits.html
@@ -18,7 +18,10 @@
       Highcharts.chart('container', {
           chart: {
               type: 'bar',
-              marginLeft: 215
+              marginLeft: 215,
+              style: {
+                  'float': 'left'
+              }
           },
           title: {
               text: 'Number of benefit enrollees in Forsyth County'
