--- a/plots/income_diff_hc_copy.html
+++ b/plots/income_diff_hc_copy.html
@@ -90,11 +90,11 @@
 	        	};
 	        } else if (num_benefits == 6) {
 	        	for (i=0; i < array_benefit[0].length; i++) {	        	
-	        		sum.push(+(array_benefit[0][i] + array_benefit[1][i] + array_benefit[2][i] + array_benefit[3][i] + array_benefit[4][i] + array_benefit[5][i]).toFixed(2));
+	        		sum.push(array_benefit[0][i] + array_benefit[1][i] + array_benefit[2][i] + array_benefit[3][i] + array_benefit[4][i] + array_benefit[5][i]);
 	        	};
 	        } else if (num_benefits == 7) {
 	        	for (i=0; i < array_benefit[0].length; i++) {	        	
-	        		sum.push(+(array_benefit[0][i] + array_benefit[1][i] + array_benefit[2][i] + array_benefit[3][i] + array_benefit[4][i] + array_benefit[5][i] + array_benefit[6][i]).toFixed(2));
+	        		sum.push(array_benefit[0][i] + array_benefit[1][i] + array_benefit[2][i] + array_benefit[3][i] + array_benefit[4][i] + array_benefit[5][i] + array_benefit[6][i]);
 	        	};
 	        }
 	        return sum
