--- a/plots/income_diff_hc.html
+++ b/plots/income_diff_hc.html
@@ -277,6 +277,39 @@
 							xAxis: 'monthly'
 						}},
 						
+					responsive: {
+				        rules: [{
+				            condition: {
+				                maxWidth: 400
+				            },
+				            chartOptions: {
+											 title: { text: null },
+											 subtitle: { text: 'Touch lines to know group' },
+											 legend: {
+				                  enabled: false
+				              },
+				              credits: {
+				                  enabled: false
+				              },
+											xAxis: {
+												type: 'linear',
+												id: 'monthly',
+												title: {
+														text: 'Monthly Income'
+												},
+												labels: {
+														format: '${value}'
+												},
+												plotLines: null
+											},
+				          		yAxis: {
+				        				title: {
+				        						text: 'Income plus benefits'
+				        				}
+				          		}
+				            }
+										}]}, // responsive
+						
 			xAxis: [{
 				type: 'linear',
 				id: 'monthly',
