change plot series to nc health choice and smart start are combined

--- a/plots/benefits_cliff_hc.1.html
+++ b/plots/benefits_cliff_hc.1.html
@@ -218,8 +218,7 @@
 		
 				{name: 'FNS (Food Stamps)', data: make_data_series(one_adult, "FNS (Food Stamps)")},
 				{name: 'Housing Choice Voucher', data: make_data_series(one_adult, "Housing Choice Voucher")},
-				{name: 'NC Child Care Subsidy', data: [null]},
-				{name: 'Smart Start', data: [null]},
+				{name: "NC Child Care Subsidy / Smart Start", data: [null]},
 				{name: 'NC Medicaid / Health Choice', data: [null]},
 				{name: 'Women, Infants, and Children (WIC)', data: [null]},
 				{name: 'Work First', data: [null]}
@@ -244,8 +243,7 @@
 		
 				{name: 'FNS (Food Stamps)', data: make_data_series(family_comp, "FNS (Food Stamps)")},
 				{name: 'Housing Choice Voucher', data: make_data_series(family_comp, "Housing Choice Voucher")},
-				{name: 'NC Child Care Subsidy', data: make_data_series(family_comp, "Child Care Subsidy")},
-				{name: 'Smart Start', data: make_data_series(family_comp, "Smart Start")},
+				{name: "NC Child Care Subsidy / Smart Start", data: make_data_series(family_comp, "NC Child Care Subsidy / Smart Start")},
 				{name: 'NC Medicaid / Health Choice', data: make_data_series(family_comp, "NC Medicaid / Health Choice")},
 				{name: 'Women, Infants, and Children (WIC)', data: make_data_series(family_comp, "WIC")},
 				{name: 'Work First', data: make_data_series(family_comp, "WIC")}
