--- a/Buncombe_County_2020/plots/benefits_income_hc.html
+++ b/Buncombe_County_2020/plots/benefits_income_hc.html
@@ -36,7 +36,7 @@
         defaultSeriesType: 'line',
 				height: '80%'
     },
-		title: { text: 'Forsyth County, NC income and benefits' },
+		title: { text: 'Buncombe County, NC income and benefits' },
 		subtitle: { text: 'One adult'},
     credits: {
         text: 'Forsyth Futures',
