--- a/Buncombe_County_2020/plots/number_benefits.html
+++ b/Buncombe_County_2020/plots/number_benefits.html
@@ -24,7 +24,7 @@
               }
           },
           title: {
-              text: 'Number of benefit enrollees in Forsyth County'
+              text: 'Number of benefit enrollees in Buncombe County'
           },
 
           xAxis: {
