--- a/Buncombe_County_2020/plots/cliff_cdf_hc.html
+++ b/Buncombe_County_2020/plots/cliff_cdf_hc.html
@@ -31,7 +31,7 @@
 				height: '70%'
     },
 
-		title: { text: 'Forsyth County, NC household incomes' },
+		title: { text: 'Buncombe County, NC household incomes' },
 
 		subtitle: { text: 'Household size: One person'},
 
