--- a/Buncombe_County_2020/plots/benefits_cliff_hc.html
+++ b/Buncombe_County_2020/plots/benefits_cliff_hc.html
@@ -159,8 +159,8 @@
 						//headerFormat: '<span style="color:{series.color}"><b>{series.name}</b></span><table>',
 						//pointFormat: '<tr><td style="padding:0">Benefit:  <b>${point.y:.0f}</b></td></tr>' +
 						//		'<tr><td style="padding:0">Income: <b>${point.x:.0f}</b></td></tr>',
-						footerFormat: '</table>',
-						useHTML: true,
+						//footerFormat: '</table>',
+						//useHTML: true,
 						//crosshairs: true
 						formatter() {
 						  let x = `${this.x}` / 10;
