--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot3.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot3.html
@@ -111,11 +111,11 @@
                   }
                 }]},
           series: [{
-              name: 'Enrolled in FNS',
-              data: [21431]
+              name: 'Enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
+              data: [17152]
           }, {
-              name: 'Not enrolled in FNS',
-              data: [108111]
+              name: 'Not enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
+              data: [107796]
           }]
       });
 
