--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
@@ -29,7 +29,7 @@
 
           xAxis: {
               categories: [
-              	'Income level status<br><i>2019<i>'
+              	''
                ],
               crosshair: true,
               title: {
@@ -111,11 +111,14 @@
                   }
                 }]},
           series: [{
-              name: 'Below income level',
-              data: [34193]
+              name: 'Below income level', //from totals_overall table in cliff_population_2019.R
+              data: [30602]
           }, {
-              name: 'Above income level',
-              data: [95349]
+              name: 'Enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
+              data: [17152]
+          }, {
+              name: 'Above income level', //from totals_overall table in cliff_population_2019.R
+              data: [94346]
           }]
       });
 
