--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot4.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot4.html
@@ -36,7 +36,8 @@
                ],
               crosshair: true,
               title: {
-                  text: null
+                  text: 'Race/Ethnicity',
+                  align: 'middle'
               }
           },
           yAxis: {
