--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot3.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot3.html
@@ -29,7 +29,7 @@
 
           xAxis: {
               categories: [
-              	'FNS status<br><i>2019<i>'
+              	'FNS status'
                ],
               crosshair: true,
               title: {
