added brand colors

--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot.html
@@ -119,9 +119,11 @@
                   }
                 }]},
           series: [{
+              color: '#004c89',
               name: 'Below income level',
               data: [9204,7352,5205,5136,3705] //from totals_by_household_size table in cliff_population_2019.R
           }, {
+              color: '#478aa1',
               name: 'Above income level',
               data: [20782,37400,17748,12556,5860] //from totals_by_household_size table in cliff_population_2019.R
           }
