--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
@@ -111,12 +111,15 @@
                   }
                 }]},
           series: [{
+              color: '#004c89',
               name: 'Below income level', //from totals_overall table in cliff_population_2019.R
               data: [30602]
           }, {
+              color: '#85cae4',
               name: 'Enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
               data: [17152]
           }, {
+              color: '#478aa1',
               name: 'Above income level', //from totals_overall table in cliff_population_2019.R
               data: [94346]
           }]
