--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot4.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot4.html
@@ -117,9 +117,11 @@
                   }
                 }]},
           series: [{
+              color: '#004c89',
               name: 'Below income level',
               data: [3235,5823,919,20625] //from totals_by_race_ethnicity table in cliff_population_2019.R
           }, {
+              color: '#478aa1',
               name: 'Above income level',
               data: [5376,4640,2823,81507] //from totals_by_race_ethnicity table in cliff_population_2019.R
           }]
