--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
@@ -24,7 +24,7 @@
               }
           },
           title: {
-              text: 'Income level status by individuals in Buncombe County'
+              text: 'Income level status by individuals in Buncombe County, NC'
           },
 
           xAxis: {
@@ -115,7 +115,7 @@
               name: 'Below income level', //from totals_overall table in cliff_population_2019.R
               data: [30602]
           }, {
-              color: '#85cae4',
+              color: '#f38538',
               name: 'Enrolled in FNS', //from totals_by_fns table in cliff_population_2019.R
               data: [17152]
           }, {
