--- a/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
+++ b/Buncombe_County_2020/income_cliff/test_plots/test_plot2.html
@@ -24,7 +24,7 @@
               }
           },
           title: {
-              text: 'Income level status by individuals in Buncombe County, NC'
+              text: 'Income level status for total population in Buncombe County, NC'
           },
 
           xAxis: {
