--- a/Buncombe_County_2020/plots/income_diff_hc.html
+++ b/Buncombe_County_2020/plots/income_diff_hc.html
@@ -43,12 +43,11 @@
     <div id = "selections">
     
     Hours Worked Per Week: <input type="number" oninput="calculate()" id="amount" name="amount" min="0.00" step="0.01" max="2500" value="0">
-    <br>
-    Hourly Wage: <input type="number" oninput="calculate()" id="quantity" name="quantity" min="0.00" step="0.01" max="2500" value="0.00">
-    <br>
-    Monthly Income: <input type="number" id="total" name="total">  
-    <br>
+    Hourly Wage: $<input type="number" oninput="calculate()" id="quantity" name="quantity" min="0.00" step="0.01" max="2500" value="0.00">
     <p></p>
+    Monthly Income: $<input type="number" id="total" name="total">  
+    <p></p>
+    <hr>
 
 		Select Family Size:
 		<SELECT id="list" onchange=disable_checks()>
