--- a/Buncombe_County_2020/plots/income_diff_hc.html
+++ b/Buncombe_County_2020/plots/income_diff_hc.html
@@ -42,10 +42,10 @@
     
     <div id = "selections">
     
-    Hours Worked Per Week: <input type="number" oninput="calculate()" id="amount" name="amount" min="0.00" step="0.01" max="2500" value="0">
-    Hourly Wage: $<input type="number" oninput="calculate()" id="quantity" name="quantity" min="0.00" step="0.01" max="2500" value="0.00">
+    Hours Worked Per Week: <input type="number" oninput="calculate()" id="amount" name="amount" min="0.01" step="0.01" max="2500" value="0"/>
+    Hourly Wage: $<input type="number" oninput="calculate()" id="quantity" name="quantity" min="0.01" step="0.01" max="2500" value="0.00"/>
     <p></p>
-    Monthly Income: $<input type="number" id="total" name="total">  
+    Monthly Income: $<input type="text" id="total" name="total" oninput="this.setCustomValidity('')"/>  
     <p></p>
     <hr>
 
